[gd_scene load_steps=5 format=3 uid="uid://cbgxp3ghx1agd"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_1jnfh"]
[ext_resource type="Texture2D" uid="uid://c1cl6qetwg8st" path="res://assets/icons/Arrow_back.svg" id="1_ou2sq"]
[ext_resource type="Texture2D" uid="uid://dd11xddir3fja" path="res://assets/icons/Backspace.svg" id="2_3ijd4"]
[ext_resource type="Script" path="res://components/KeyPad/KeyPad.gd" id="2_dl4k5"]

[node name="KeyPad" type="PanelContainer"]
custom_minimum_size = Vector2(185, 266)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_1jnfh")
script = ExtResource("2_dl4k5")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
horizontal_alignment = 1

[node name="ChipsPanel" type="PanelContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(98.445, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="1" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "1"

[node name="4" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "4"

[node name="7" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "7"

[node name="Close" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = ExtResource("1_ou2sq")
flat = true
icon_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="2" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "2"

[node name="5" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "5"

[node name="8" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "8"

[node name="0" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "0"

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="3" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "3"

[node name="6" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "6"

[node name="9" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "9"

[node name="Backspace" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = ExtResource("2_3ijd4")
flat = true
icon_alignment = 1

[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer2/1" to="." method="_on_button_pressed" binds= [1]]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer2/4" to="." method="_on_button_pressed" binds= [4]]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer2/7" to="." method="_on_button_pressed" binds= [7]]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer2/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer3/2" to="." method="_on_button_pressed" binds= [2]]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer3/5" to="." method="_on_button_pressed" binds= [5]]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer3/8" to="." method="_on_button_pressed" binds= [8]]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer3/0" to="." method="_on_button_pressed" binds= [0]]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer4/3" to="." method="_on_button_pressed" binds= [3]]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer4/6" to="." method="_on_button_pressed" binds= [6]]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer4/9" to="." method="_on_button_pressed" binds= [9]]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer4/Backspace" to="." method="_on_backspace_pressed"]
